# rv32-emu

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  shell.nix
.github/workflows/: tests.yml
examples/: README.md
examples/c-program/: Makefile  README.md
examples/c-program/src/: fib.c  main.s
examples/ecalls/: Makefile  README.md
examples/ecalls/src/: main.s
examples/minimal/: README.md  main.s
examples/with-makefile/: Makefile  README.md
examples/with-makefile/src/: main.s
src/: cpu.c  cpu.h  elf_helpers.c  elf_helpers.h  elf_util.c  elf_util.h  gdb.c  gdb.h  io.c  io.h  log.c  log.h  macros.h  main.c  memory.c  memory.h  numeric.c  numeric.h  protocol.c  protocol.h  stdinc.h  str.c  str.h  util.c  util.h
tests/: CMakeLists.txt  test_str.c
